<resources>
    <string name="app_name">NY Times Articles</string>
    <string name="something_went_wrong">Something went wrong...</string>
    <string name="error_msg">An alien is probably blocking your signal.</string>
    <string name="retry">Retry</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="period1">Period: 1</string>
    <string name="period7">Period: 7</string>
    <string name="period30">Period: 30</string>
    <string name="search_hint">Search</string>
</resources>
