<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.articles.nytimes.ui.activities.MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_period_1"
        android:title="@string/period1"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_period_7"
        android:title="@string/period7"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_period_30"
        android:title="@string/period30"
        app:showAsAction="never" />

</menu>
