<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <RelativeLayout
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

          <ImageView
              android:layout_centerInParent="true"
                 android:id="@+id/emptyImg"
                 android:src="@drawable/nointernet_connection"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/primaryTxtView"
            style="@style/item_something_wrong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emptyImg"
            android:layout_marginTop="50dp"
            android:text="@string/something_went_wrong" />
        <TextView
            android:layout_below="@+id/primaryTxtView"
            style="@style/item_name"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_msg" />

        <Button
            android:layout_marginBottom="50dp"
            android:textColor="@color/text_color"
            android:text="@string/retry"
            android:layout_alignParentBottom="true"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:id="@+id/retryBtn"
            android:background="@drawable/btn_reload"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </RelativeLayout>

</layout>